--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"@types/firebase": "^3.2.1",
 		"@types/jest": "^27.5.2",
 		"@types/node": "^16.18.32",
 		"@types/react": "^18.2.6",
 		"@types/react-dom": "^18.2.4",
-		"typescript": "^4.9.5",
+		"firebase": "^9.22.1",
 		"i18next": "^22.5.0",
 		"i18next-browser-languagedetector": "^7.0.1",
 		"i18next-http-backend": "^2.2.1",
@@ -26,6 +27,7 @@
 		"react-router-dom": "^6.11.2",
 		"react-scripts": "5.0.1",
 		"sass": "^1.62.1",
+		"typescript": "^4.9.5",
 		"swiper": "^9.3.2",
 		"web-vitals": "^2.1.4"
 	},
