--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@types/node": "^16.18.32",
 		"@types/react": "^18.2.6",
 		"@types/react-dom": "^18.2.4",
+		"@types/react-slick": "^0.23.10",
 		"firebase": "^9.22.1",
 		"i18next": "^22.5.0",
 		"i18next-browser-languagedetector": "^7.0.1",
@@ -26,9 +27,12 @@
 		"react-responsive": "^9.0.2",
 		"react-router-dom": "^6.11.2",
 		"react-scripts": "5.0.1",
+		"react-scroll": "^1.8.9",
+		"react-slick": "^0.29.0",
 		"sass": "^1.62.1",
-		"typescript": "^4.9.5",
+		"slick-carousel": "^1.8.1",
 		"swiper": "^9.3.2",
+		"typescript": "^4.9.5",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
